# frametv

./: .gitignore  README.md  frametv_v4.code-workspace  package-lock.json  package.json  turbo.json
app/: layout.tsx  page.tsx
apps/database-service/: README.md  alembic.ini  package.json  pyproject.toml
apps/database-service/alembic/: env.py
apps/database-service/alembic/versions/: 001_add_tv_metadata_fields.py  002_add_image_slots_metadata_snapshot.py
apps/database-service/src/: __init__.py  database.py  main.py  scanner.py
apps/database-service/src/models/: __init__.py  base.py  exif_metadata.py  gallery_image.py  gallery_image_tag.py  image_slot.py  metadata_snapshot.py  settings.py  slot_transform.py  source_image.py  source_image_tag.py  tag.py  tv_content_mapping.py
apps/database-service/src/repositories/: __init__.py  base.py  gallery_image_repository.py  gallery_image_tag_repository.py  settings_repository.py  source_image_repository.py  source_image_tag_repository.py  tag_repository.py  tv_content_repository.py
apps/database-service/src/routers/: __init__.py  gallery_images.py  scanner.py  settings.py  source_images.py  tags.py  tv_content.py
apps/sync-service/: .gitignore  README.md  main.py  models.py  package.json  pyproject.toml  requirements.txt
apps/sync-service/src/: __init__.py  database_client.py  main.py  models.py  pair_tv.py  tv_mock.py  tv_refresh.py  tv_sync.py  tv_sync_smart.py
apps/sync-service/tests/: __init__.py  test_health.py  test_tv_sync.py
apps/web/: .gitignore  next.config.js  package-lock.json  (+3 more)
components/: CanvasEditor.tsx  ImageLayer.tsx  SelectionHandles.tsx  TemplateSelector.tsx
lib/: config.ts  templates.ts
scripts/: clean.sh  install.sh
(+83 files in other folders)
